--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,15 @@
   box-sizing: border-box;
 }
 
+/* General style */
+body{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* Generic project styles */
+  color: #3a3a3a;
+}
+
 /* header */
 header{
   background-color: lightcoral;
@@ -12,6 +21,8 @@ header{
 /* Main */
 main{
   background-color: lightblue;
+  /* make main element take up any surplus space to push footer down */
+  flex: 1 0 auto;
 }
 
 /* Footer */
