--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ body{
 header{
   background-color: lightcoral;
 }
+
+h1{
+  font-family: 'Oswald', sans-serif;
+}
 /* Main */
 main{
   background-color: lightblue;
