--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,19 @@ h1{
   border-bottom:1px solid #3a3a3a;
 }
 
+/* navbar style with dropdown toggle */
+nav {
+  position:absolute;
+  background-color: #ffffff;
+  box-shadow: 0 2px 2px #3a3a3a;
+  z-index: 99;
+  width: 100%;
+  left: 0;
+  padding:  0 1rem;
+  display: none;
+}
+
+
 /* Main */
 main{
   background-color: lightblue;
