--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,4 +118,17 @@ footer{
   .nav-toggle-label {
     display: none;
   }
+
+  #log{
+    font-size: 280%;
+    line-height: 75px;
+    margin: 0 0.5rem;
+  }
+  /* main content */
+  main {
+
+    /* pysh main content down to accomodate larger header */
+    margin-top: 79px;
+
+  }
 }
