--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,155 +1,157 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
-/* astrick wilcard selector to override default styles added by the browser */
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+
+/* Asterisk wildcard selector to override default styles added by the browser */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-/* General style */
-body{
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  /* Generic project styles */
-  color: #3a3a3a;
-  font-family: 'Lato', sans-serif;
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
-/* header */
-header{
-  background-color: #ffffff;
-  padding:  0 1rem;
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  box-shadow: 0 2px 2px #3a3a3a;
-  /* for content to display in the row */
-  display: flex;
-  /* for content to have spaces between them */
-  justify-content: space-between;
-  align-items: baseline;
+/* Header */
+header {
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
-h1{
-  font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #252525;
-  letter-spacing: 2px;
+h1 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 
 #menu {
-  font-size: 110%;
-  letter-spacing: 4px;
-  list-style-type: none;
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
 }
 
 #menu > li {
-  /* to space the content */
-  margin-bottom: 1rem;
+    margin-bottom: 1em;
 }
 
 .active {
-  border-bottom:1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
 }
 
-
-/* navbar style with dropdown toggle */
+/* Navbar styles with dropdown toggle */
 nav {
-  position: absolute;
-  background-color: #ffffff;
-  box-shadow: 0 2px 2px #3a3a3a;
-  z-index: 99;
-  width: 100%;
-  left: 0;
-  padding: 0 1rem;
-  display: none;
-  top: 100%
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
 }
 
-/* nav toggle */
+/* Nav toggle */
 #nav-toggle:checked~nav {
-  display: block;
+    display: block;
 }
 
 #nav-toggle {
-  display: none;
+    display: none;
 }
 
 .nav-toggle-label {
-  font-size: 2rem;
+    font-size: 2rem;
 }
-/* Main */
+
+/* Main content */
 main {
-  background-color: lightblue;
-  /* make main element take up any surplus space to push footer down */
-  flex: 1 0 auto;
-  margin-top: 47px;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+    margin-top: 47px;
+}
+
+/* Hero section */
+#hero {
+    background-color: red;
+
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover; 
 }
 
 /* Footer */
-#social-networks{
-  text-align: center;
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-evenly;
-  list-style-type: none;
-}
-
-#social-networks i{
-  font-size: 160%;
-  padding:  5%;
-  color: #3a3a3a
-}
-
-
-
-/* media query: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {
-  
-  /* header */
-  nav{
-    display: block;
-    position: relative;
-    box-shadow: none;
-    width: fit-content;
-    padding-right: 1rem;
-  }
-  #menu{
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
     display: flex;
-  }
-  #menu > li {
-    padding-left: 1rem;
-  }
-  .nav-toggle-label{
-    display: none;
-  }
-  #log {
-    font-size: 280%;
-    line-height: 75px;
-    margin: 0 0.5rem;
-
-  }
-  /* main contect */
-
-  main {
-    /* push main contact down to accomandate lager header */
-    margin-top: 79px;
-  }
-
-  /* media query: tablets and larger (992px and up) */
-@media screen and (min-width: 992px) {
- #menu a:hover{
-    border-bottom: 1px solid #3a3a3a;
-  }
-
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
+}
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
 }
