--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,30 @@ main {
   color: #ffffff;
 }
 
+#reasons {
+  width: 90%;
+  margin: 20px auto;
+}
+
+#reasons h2 {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 280%;
+}
+
+#benefits-physical > div, #bbenefits-mental > div {
+  margin-bottom: 20px;
+  line-height: 20px;
+}
+
+#benefits p {
+  padding-right: 0 20px;
+}
+
+#benefits hr {
+  border-top: 1px solid #3a3a3a;
+  margin: 5px 0;
+}
 /* Footer */
 #social-networks {
     text-align: center;
@@ -172,7 +196,8 @@ main {
       right: 50px;
     }
 
-  }
+}
+
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
