added circular image to reason section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,26 @@ main {
   border-top: 1px solid #3a3a3a;
   margin: 5px 0;
 }
+
+/* circle-over */
+#circle-over-bg{
+  background-color: red;
+  height: 90vw;
+  width: 90vw;
+  background: url("../images/reasons-image.webp") no-repeat top center / cover; 
+  margin-bottom: 20px;
+  /* make circle */
+  border-radius: 50%;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+#benfits-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
