--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ main {
 /* Gallery page */
 #photos img {
   width: 100%;
-  line-height: 1rem;
+  line-height: 1re;
 }
 #photos{
   line-height: 0;
@@ -214,6 +214,15 @@ main {
     padding: 5%;
     color: #3a3a3a;
 }
+
+/* media quary: Large or landscape  phones(576px and up) */
+@media screen and (min-width: 576px) {
+  #photos{
+      column-count: 2;
+      column-gap: 0;
+  }
+}
+
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -270,6 +279,10 @@ main {
       text-align: end;
       align-self: flex-end;
     }
+    /* Gallery */
+    #photos {
+      column-count: 3;
+    }
 }
 
 
@@ -278,6 +291,12 @@ main {
     #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
+
+    /* Gallery */
+    #photos {
+      column-count: 4;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 1200px and up) */
