--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,14 @@ body {
 }
 
 h1, h2, h3 {
-  font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #252525;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 
-.hidden-heading{
-  display: none;
+.hidden-heading {
+    display: none;
 }
 
 /* Header */
@@ -46,8 +46,6 @@ header a {
     text-decoration: none;
     color: inherit;
 }
-
-
 
 #menu {
     font-size: 110%;
@@ -90,158 +88,163 @@ nav {
 
 /* Main content */
 main {
-    /* Make main element take up any surplus space to push footer down */
+    /* Enlarge main element to push footer down*/
     flex: 1 0 auto;
-       /* Add margin at the top to prevent content from being covered by the header */
+    /* Add margin at the top to prevent content from being covered by the header */
     margin-top: 47px;
-      /* Enable flex properties for child elements */
+    /* Enable flex properties for child elements */
     display: flex;
     flex-direction: column;
 }
 
 /* Hero section */
 #hero {
-    background-color: red;
     height: 600px;
     width: 100%;
-    background: url("../images/hero-image.webp") no-repeat center center/cover; 
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
 }
 
 #cover-text {
-  /* rgba value sets the opacity so it is semi-transparent */
-  background-color: rgb(241, 109, 107, .7);
-  font-size: 130%;
-  position: absolute;
-  bottom: 30px;
-  width: 80%;
-  min-height: 200px;
-  padding-top: 40px;
-  padding-left: 10px;
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
 }
 
 #cover-text > h2, #cover-text > h3 {
-  color: #ffffff;
+    color: #ffffff;
 }
 
+/* Reasons section */
 #reasons {
-  width: 90%;
-  margin: 20px auto;
+    width: 90%;
+    margin: 20px auto;
 }
 
 #reasons h2 {
-  margin-bottom: 20px;
-  text-align: center;
-  font-size: 280%;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
 }
 
-#benefits-physical > div, #bbenefits-mental > div {
-  margin-bottom: 20px;
-  line-height: 20px;
+#benefits-physical > div,
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
 }
 
 #benefits p {
-  padding-right: 0 20px;
+    padding: 0 20px;
 }
 
 #benefits hr {
-  border-top: 1px solid #3a3a3a;
-  margin: 5px 0;
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
 }
 
-/* circle-over */
-#circle-over-bg{
-  background-color: red;
-  height: 90vw;
-  width: 90vw;
-  background: url("../images/reasons-image.webp") no-repeat top center / cover; 
-  margin-bottom: 20px;
-  /* make circle */
-  border-radius: 50%;
-  max-width: 300px;
-  max-height: 300px;
+#circle-cover-bg {
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Makes the square image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
 }
 
-#benfits-image {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-
-/* meetup section */
-#times{
-  background: url("../images/dublin-city.webp") no-repeat  center / cover;
-  /* handle responsivity without the need for a media query */
-  display: flex;
-  flex-wrap: wrap;
+/* Meetup Times section */
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #times div {
-  color: #fafafa;
-  background-color: rgba(0, 0, 0, .6);
-  padding: 15px;
-  text-align: center;
-
-  /* this will npt wrap on screen of less than 400 px wide. Each div will expend to fill the available space on its row */
-  flex-basis: 200px;
-  flex-grow: 1;
-  /* creates a grid of meetup time dives over the background image */
-  border: 2PX solid white;
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* Creates a grid of meetup time dives over the background image */
+    border: 2px solid white;
 }
 
 #times h3 {
-  color: #fafafa;
+    /* Override the heading colour set in general styles */
+    color: #fafafa;
 }
-
 
 /* Gallery page */
 #photos img {
-  width: 100%;
-  line-height: 1re;
-}
-#photos{
-  line-height: 0;
+    width: 100%;
+    line-height: 1em;
 }
 
-/* signup section */
-#signup {
-  background-image: url("../images/signup-image.webp");
-  background-size: cover;
-  background-position: 75%;
-  padding: 20px 10% 0 10%;
-  flex-grow: 1;
+#photos {
+    line-height: 0;
 }
+
+/* Form */
+#signup {
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
 
 #signup-form {
-color: #ffffff;
-background-color: rgba(60, 60, 60, 0.6);
-padding: 30px;
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
 
+
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
 }
-#signup-form > h2{
-  color: #fafafa;
-  margin-bottom: 20px;
-}
+
 
 .text-input {
-  background: transparent;
-  color: #fafafa;
-  border: 1px solid #fafafa;
-  border-radius: 2px;
-  height: 25px;
-  margin: 25px 0 20px 0;
-  padding: 0 5px;
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
 }
 
-#radio-buttons{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
 
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
+
+
 .join-button {
-  margin-top: 20px;
+    margin-top: 20px;
     border-radius: 2px;
     padding: 15px 32px;
     font-size: 100%;
@@ -264,14 +267,13 @@ padding: 30px;
     color: #3a3a3a;
 }
 
-/* media quary: Large or landscape  phones(576px and up) */
+/* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
-  #photos{
-      column-count: 2;
-      column-gap: 0;
-  }
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
 }
-
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -308,57 +310,57 @@ padding: 30px;
         margin-top: 79px;
     }
 
-    /* hero */
-    #cover-text{
-      width: 300px;
-      right: 50px;
+    /* Hero */
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 
-    /* reason section */
-    #benefits-physocal, #benefits-mental{
-      display: flex;
-      flex-direction: column;
-      width: 100%;
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
 
-    #benefits-physocal > div, #benefits-mental >  div {
-      width: 75%;
+    #benefits-physical > div,
+    #benefits-mental > div {
+        width: 75%;
     }
-    #benefits-mental >  div{
-      text-align: end;
-      align-self: flex-end;
+
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
     }
+
     /* Gallery */
     #photos {
-      column-count: 3;
+        column-count: 3;
     }
 
+    /* Form */
     #signup {
-      background-position: center;
-      position: relative;
+        background-position: center;
+        position: relative;
     }
 
     #signup-form {
-      max-width: 400px;
-      position: absolute;
-      left: 10%;
-      top: 150px;
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
     }
-    
+
     .text-input:hover {
-      border-color: #f16c6b;
-  }
-  
-  .join-button:hover {
-      background-color: #fafafa;
-      color: #454b1b;
-  }
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
 }
-
-
-
-
-
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
@@ -368,35 +370,34 @@ padding: 30px;
 
     /* Gallery */
     #photos {
-      column-count: 4;
+        column-count: 4;
     }
-
 }
 
-/* Large devices (laptops and desktops, 1200px and up) */
-@media screen and (min-width: 1200px) {
-  
-  /* reason section */
-  #benefits {
-    display: flex;
-    flex-direction: row;
-  }
-  #benefits > div{
-    flex: 1;
-  }
+@media screen and (min-width: 1200px) {    
+    /* Reasons section */
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
 
-  #benefits-image {
-    order: 1;
-  }
+    #benefits > div {
+        flex: 1;
+    }
 
-  #benefits-mental {
-    order: 1;
-  }
+    #benefits-image {
+        order: 0
+    }
 
-  #benefits-mental > div {
-    align-self: flex-start;
-  }
-  #benefits-physical > div {
-    align-self: flex-end;
-  }
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end;
+    }
 }
